learning css animations

--- a/style.css
+++ b/style.css
@@ -1,10 +1,89 @@
 body {
   background-color: green;
 }
+/* utility classes */
+.animate {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
 
-.title {
+.animate--infinite {
+  animation-iteration-count: infinite;
+}
+
+.animate--delay-1s {
+  animation-delay: 1s;
+}
+
+.animate--fast {
+  animation-duration: 0.6s;
+}
+
+.animate--slow {
+  animation-duration: 3s;
+}
+/* .title {
   font-size: 5rem;
   margin-top: 20rem;
   text-align: center;
   color: rgba(165, 42, 42, 0.377);
+  animation-name: rotate;
+  animation-timing-function: linear;
+  transform-origin: top left;
+
+  transition: transform 0.3s ease;
+}
+
+.title:hover {
+  transform: translateY(-70px);
+} */
+
+@keyframes slideInLeft {
+  from {
+    transform: translateX(80%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+/* .title {
+  animation: slideInLeft 4s ease-in; */
+/* animation-name: slideInLeft;
+  animation-duration: 5s;
+  animation-timing-function: ease-out;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: normal;
+  animation-fill-mode: forwards; */
+/* transform: translateX(-150px);
+  font-size: 5rem;
+  margin-top: 20rem;
+  text-align: center;
+  color: rgba(165, 42, 42, 0.377);
+} */
+
+.slideInLeft {
+  animation-name: slideInLeft;
+  font-size: 5rem;
+  margin-top: 20rem;
+  text-align: center;
+  color: rgba(165, 42, 42, 0.377);
+}
+h1 {
+  text-align: center;
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotate {
+  animation-name: rotate;
+  animation-timing-function: linear;
+  transform-origin: top left;
 }
